# bevy_tictactoe

./: Cargo.toml  readme.md
assets/scenes/: loaded.ron  loaded.scn.ron  saved.ron  saved.scn.ron
src/: ai.rs  game.rs  main.rs  menu.rs  old_main.rs  palette.rs  players.rs  test_game.rs  testmode.rs  utils.rs
