[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy-inspector-egui = { version = "0.14" } # Is this still used?
bevy_editor_pls = "0.2"
bevy_tweening = "0.6"
rand = "0.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
